Complete redo of directory and file structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,4 +15,8 @@
         "test_*.py"
     ],
     "python.pythonPath": "C:\\Program Files\\Python39\\python.exe",
+    "python.linting.flake8Enabled": true,
+    "python.linting.pylintEnabled": false,
+    "python.linting.enabled": true,
+    "python.linting.mypyEnabled": false,
 }
